fix: cache the .brownie directory

--- a/.github/workflows/test-suite.yaml
+++ b/.github/workflows/test-suite.yaml
@@ -23,6 +23,7 @@ jobs:
           path: |
             ~/.solcx
             ~/.vvm
+            ~/.brownie
           key: compiler-cache
 
       - name: Setup Node.js
