fix: split test suite workflow into unit tests and stateful tests

--- a/.github/workflows/state-tests.yaml
+++ b/.github/workflows/state-tests.yaml
@@ -1,4 +1,4 @@
-name: test-suite
+name: unitary
 
 on: ["push", "pull_request"]
 
@@ -9,10 +9,6 @@ env:
 jobs:
   unitary:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        stateful: [true, false]
 
     steps:
       - uses: actions/checkout@v2
@@ -41,4 +37,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run Tests
-        run: brownie test --stateful ${{ matrix.stateful }}
+        run: brownie test --stateful true
