Revert "chore: update requirements"
This reverts commit 00f90d9e51bd287b1eda3e28e0143a0d07ee81d5.

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,10 @@ aiohttp==3.7.4.post0
     # via
     #   eth-brownie
     #   web3
+appdirs==1.4.4
+    # via
+    #   black
+    #   eth-brownie
 asttokens==2.0.4
     # via
     #   eth-brownie
@@ -33,7 +37,7 @@ bitarray==1.2.2
     # via
     #   eth-account
     #   eth-brownie
-black==21.8b0
+black==21.7b0
     # via
     #   -r requirements.in
     #   eth-brownie
@@ -80,11 +84,11 @@ eth-account==0.5.5
     # via
     #   eth-brownie
     #   web3
-eth-brownie==1.16.3
+eth-brownie==1.16.2
     # via -r requirements.in
 eth-event==1.2.3
     # via eth-brownie
-eth-hash[pycryptodome]==0.3.2
+eth-hash[pycryptodome]==0.3.1
     # via
     #   eth-brownie
     #   eth-event
@@ -118,6 +122,7 @@ eth-utils==1.10.0
     #   eth-account
     #   eth-brownie
     #   eth-event
+    #   eth-hash
     #   eth-keyfile
     #   eth-keys
     #   eth-rlp
@@ -131,7 +136,7 @@ filelock==3.0.12
     # via virtualenv
 flake8==3.9.2
     # via -r requirements.in
-hexbytes==0.2.2
+hexbytes==0.2.1
     # via
     #   eip712
     #   eth-account
@@ -139,7 +144,7 @@ hexbytes==0.2.2
     #   eth-event
     #   eth-rlp
     #   web3
-hypothesis==6.17.4
+hypothesis==6.15.0
     # via eth-brownie
 identify==2.2.13
     # via pre-commit
@@ -157,7 +162,7 @@ iniconfig==1.1.1
     # via
     #   eth-brownie
     #   pytest
-ipfshttpclient==0.8.0a2
+ipfshttpclient==0.7.0
     # via
     #   eth-brownie
     #   web3
@@ -220,15 +225,12 @@ pep517==0.11.0
 pip-tools==6.2.0
     # via -r requirements.in
 platformdirs==2.3.0
-    # via
-    #   black
-    #   eth-brownie
-    #   virtualenv
-pluggy==1.0.0
+    # via virtualenv
+pluggy==0.13.1
     # via
     #   eth-brownie
     #   pytest
-pre-commit==2.15.0
+pre-commit==2.14.1
     # via -r requirements.in
 prompt-toolkit==3.0.20
     # via eth-brownie
@@ -276,7 +278,7 @@ pyrsistent==0.18.0
     # via
     #   eth-brownie
     #   jsonschema
-pytest==6.2.5
+pytest==6.2.4
     # via
     #   eth-brownie
     #   pytest-forked
@@ -300,7 +302,7 @@ pyyaml==5.4.1
     # via
     #   eth-brownie
     #   pre-commit
-regex==2021.8.28
+regex==2021.8.21
     # via
     #   black
     #   eth-brownie
@@ -354,10 +356,9 @@ toolz==0.11.1
     #   eth-brownie
 tqdm==4.62.2
     # via eth-brownie
-typing-extensions==3.10.0.2
+typing-extensions==3.10.0.0
     # via
     #   aiohttp
-    #   black
     #   eth-brownie
 urllib3==1.26.6
     # via
@@ -371,13 +372,13 @@ virtualenv==20.7.2
     # via pre-commit
 vvm==0.1.0
     # via eth-brownie
-vyper==0.2.16
+vyper==0.2.15
     # via eth-brownie
 wcwidth==0.2.5
     # via
     #   eth-brownie
     #   prompt-toolkit
-web3==5.23.1
+web3==5.23.0
     # via eth-brownie
 websockets==9.1
     # via
