--- a/.github/workflows/state-tests.yaml
+++ b/.github/workflows/state-tests.yaml
@@ -37,4 +37,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run Tests
-        run: brownie test --stateful true
+        run: brownie test --stateful true --failfast
